# aurora-alert-api

./: .gitignore  Cargo.toml  LICENSE-MIT  rustfmt.toml
configuration/: base_template.toml
src/: aurora_watch.rs  configuration.rs  db.rs  email.rs  lib.rs  main.rs  weather.rs
src/templates/: alert.html  mod.rs
